parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PR_PROGRAM { more_vars more_funcs main }
Rule 2     vars -> PR_VAR ids
Rule 3     ids -> type ID index
Rule 4     index -> [ CTEI ]
Rule 5     index -> [ CTEI ] [ CTEI ]
Rule 6     index -> empty
Rule 7     type -> PR_INT
Rule 8     type -> PR_FLOAT
Rule 9     type -> PR_BOOL
Rule 10    type -> PR_STRING
Rule 11    func -> func1 func2
Rule 12    func1 -> func1_1 func1_2
Rule 13    func1_1 -> PR_FUNCTION func_type ID (
Rule 14    func1_2 -> more_ids ) {
Rule 15    func2 -> more_vars more_bloques }
Rule 16    more_ids -> ids
Rule 17    more_ids -> ids more_ids
Rule 18    more_ids -> empty
Rule 19    func_type -> type
Rule 20    func_type -> PR_VOID
Rule 21    bloque -> assignation
Rule 22    bloque -> loop
Rule 23    bloque -> cond
Rule 24    bloque -> return
Rule 25    bloque -> lecture
Rule 26    bloque -> writing
Rule 27    bloque -> call
Rule 28    more_vars -> vars
Rule 29    more_vars -> vars more_vars
Rule 30    more_vars -> empty
Rule 31    more_funcs -> func
Rule 32    more_funcs -> func more_funcs
Rule 33    more_funcs -> empty
Rule 34    more_bloques -> bloque
Rule 35    more_bloques -> bloque more_bloques
Rule 36    more_bloques -> empty
Rule 37    assignation -> assignTo = mega_exp
Rule 38    assignTo -> ID other_index
Rule 39    other_index -> [ exp ]
Rule 40    other_index -> [ exp ] [ exp ]
Rule 41    other_index -> empty
Rule 42    loop -> PR_REPEAT ( mega_exp ) { more_bloques }
Rule 43    cond -> cond1 cond2
Rule 44    cond1 -> PR_IF ( mega_exp ) {
Rule 45    cond2 -> more_bloques } maybe_else
Rule 46    maybe_else -> check_else do_else
Rule 47    maybe_else -> empty
Rule 48    check_else -> PR_ELSE {
Rule 49    do_else -> more_bloques }
Rule 50    return -> PR_RETURN mega_exp
Rule 51    lecture -> PR_READ ARR ID index
Rule 52    writing -> PR_PRINT ( mega_exp )
Rule 53    func_pred -> PR_calculaRegresion ( exp )
Rule 54    func_pred -> PR_prediceResultado ( exp )
Rule 55    func_pred -> PR_calculaModa ( exp )
Rule 56    func_pred -> PR_calculaMediana ( exp )
Rule 57    func_pred -> PR_calculaMedia ( exp )
Rule 58    func_pred -> PR_calculaPoisson ( exp )
Rule 59    func_pred -> PR_calculaBinomial ( exp )
Rule 60    func_pred -> PR_calculaNormal ( exp )
Rule 61    call -> call_1 call_2
Rule 62    call -> func_pred
Rule 63    call_1 -> ID (
Rule 64    call_2 -> exp )
Rule 65    mega_exp -> opt_not super_exp
Rule 66    mega_exp -> opt_not super_exp log_op mega_exp
Rule 67    log_op -> PR_AND
Rule 68    log_op -> PR_OR
Rule 69    log_op -> PR_NOT
Rule 70    opt_not -> PR_NOT
Rule 71    opt_not -> empty
Rule 72    super_exp -> exp
Rule 73    super_exp -> exp rel_op super_exp
Rule 74    rel_op -> <
Rule 75    rel_op -> >
Rule 76    rel_op -> LE
Rule 77    rel_op -> GE
Rule 78    rel_op -> EQ
Rule 79    rel_op -> NEQ
Rule 80    exp -> termino
Rule 81    exp -> termino + exp
Rule 82    exp -> termino - exp
Rule 83    termino -> factor
Rule 84    termino -> factor * termino
Rule 85    termino -> factor / termino
Rule 86    factor -> ( super_exp )
Rule 87    factor -> + var_cte
Rule 88    factor -> - var_cte
Rule 89    factor -> var_cte
Rule 90    var_cte -> other
Rule 91    var_cte -> CTEI
Rule 92    var_cte -> CTEF
Rule 93    var_cte -> CTES
Rule 94    var_cte -> PR_TRUE
Rule 95    var_cte -> PR_FALSE
Rule 96    other -> ID other_index
Rule 97    other -> call
Rule 98    other -> empty
Rule 99    main -> PR_MAIN { more_vars more_bloques }
Rule 100   empty -> <empty>

Terminals, with rules where they appear

(                    : 13 42 44 52 53 54 55 56 57 58 59 60 63 86
)                    : 14 42 44 52 53 54 55 56 57 58 59 60 64 86
*                    : 84
+                    : 81 87
-                    : 82 88
/                    : 85
<                    : 74
=                    : 37
>                    : 75
ARR                  : 51
CTEF                 : 92
CTEI                 : 4 5 5 91
CTES                 : 93
EQ                   : 78
GE                   : 77
ID                   : 3 13 38 51 63 96
LE                   : 76
NEQ                  : 79
PR_AND               : 67
PR_BOOL              : 9
PR_ELSE              : 48
PR_FALSE             : 95
PR_FLOAT             : 8
PR_FUNCTION          : 13
PR_IF                : 44
PR_INT               : 7
PR_MAIN              : 99
PR_NOT               : 69 70
PR_OR                : 68
PR_PRINT             : 52
PR_PROGRAM           : 1
PR_READ              : 51
PR_REPEAT            : 42
PR_RETURN            : 50
PR_STRING            : 10
PR_TRUE              : 94
PR_VAR               : 2
PR_VOID              : 20
PR_calculaBinomial   : 59
PR_calculaMedia      : 57
PR_calculaMediana    : 56
PR_calculaModa       : 55
PR_calculaNormal     : 60
PR_calculaPoisson    : 58
PR_calculaRegresion  : 53
PR_prediceResultado  : 54
[                    : 4 5 5 39 40 40
]                    : 4 5 5 39 40 40
error                : 
{                    : 1 14 42 44 48 99
}                    : 1 15 42 45 49 99

Nonterminals, with rules where they appear

assignTo             : 37
assignation          : 21
bloque               : 34 35
call                 : 27 97
call_1               : 61
call_2               : 61
check_else           : 46
cond                 : 23
cond1                : 43
cond2                : 43
do_else              : 46
empty                : 6 18 30 33 36 41 47 71 98
exp                  : 39 40 40 53 54 55 56 57 58 59 60 64 72 73 81 82
factor               : 83 84 85
func                 : 31 32
func1                : 11
func1_1              : 12
func1_2              : 12
func2                : 11
func_pred            : 62
func_type            : 13
ids                  : 2 16 17
index                : 3 51
lecture              : 25
log_op               : 66
loop                 : 22
main                 : 1
maybe_else           : 45
mega_exp             : 37 42 44 50 52 66
more_bloques         : 15 35 42 45 49 99
more_funcs           : 1 32
more_ids             : 14 17
more_vars            : 1 15 29 99
opt_not              : 65 66
other                : 90
other_index          : 38 96
programa             : 0
rel_op               : 73
return               : 24
super_exp            : 65 66 73 86
termino              : 80 81 82 84 85
type                 : 3 19
var_cte              : 87 88 89
vars                 : 28 29
writing              : 26

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PR_PROGRAM { more_vars more_funcs main }

    PR_PROGRAM      shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PR_PROGRAM . { more_vars more_funcs main }

    {               shift and go to state 3


state 3

    (1) programa -> PR_PROGRAM { . more_vars more_funcs main }
    (28) more_vars -> . vars
    (29) more_vars -> . vars more_vars
    (30) more_vars -> . empty
    (2) vars -> . PR_VAR ids
    (100) empty -> .

    PR_VAR          shift and go to state 7
    PR_FUNCTION     reduce using rule 100 (empty -> .)
    PR_MAIN         reduce using rule 100 (empty -> .)

    more_vars                      shift and go to state 4
    vars                           shift and go to state 5
    empty                          shift and go to state 6

state 4

    (1) programa -> PR_PROGRAM { more_vars . more_funcs main }
    (31) more_funcs -> . func
    (32) more_funcs -> . func more_funcs
    (33) more_funcs -> . empty
    (11) func -> . func1 func2
    (100) empty -> .
    (12) func1 -> . func1_1 func1_2
    (13) func1_1 -> . PR_FUNCTION func_type ID (

    PR_MAIN         reduce using rule 100 (empty -> .)
    PR_FUNCTION     shift and go to state 13

    more_funcs                     shift and go to state 8
    func                           shift and go to state 9
    empty                          shift and go to state 10
    func1                          shift and go to state 11
    func1_1                        shift and go to state 12

state 5

    (28) more_vars -> vars .
    (29) more_vars -> vars . more_vars
    (28) more_vars -> . vars
    (29) more_vars -> . vars more_vars
    (30) more_vars -> . empty
    (2) vars -> . PR_VAR ids
    (100) empty -> .

  ! reduce/reduce conflict for PR_FUNCTION resolved using rule 28 (more_vars -> vars .)
  ! reduce/reduce conflict for PR_MAIN resolved using rule 28 (more_vars -> vars .)
  ! reduce/reduce conflict for PR_REPEAT resolved using rule 28 (more_vars -> vars .)
  ! reduce/reduce conflict for PR_RETURN resolved using rule 28 (more_vars -> vars .)
  ! reduce/reduce conflict for PR_READ resolved using rule 28 (more_vars -> vars .)
  ! reduce/reduce conflict for PR_PRINT resolved using rule 28 (more_vars -> vars .)
  ! reduce/reduce conflict for ID resolved using rule 28 (more_vars -> vars .)
  ! reduce/reduce conflict for PR_IF resolved using rule 28 (more_vars -> vars .)
  ! reduce/reduce conflict for PR_calculaRegresion resolved using rule 28 (more_vars -> vars .)
  ! reduce/reduce conflict for PR_prediceResultado resolved using rule 28 (more_vars -> vars .)
  ! reduce/reduce conflict for PR_calculaModa resolved using rule 28 (more_vars -> vars .)
  ! reduce/reduce conflict for PR_calculaMediana resolved using rule 28 (more_vars -> vars .)
  ! reduce/reduce conflict for PR_calculaMedia resolved using rule 28 (more_vars -> vars .)
  ! reduce/reduce conflict for PR_calculaPoisson resolved using rule 28 (more_vars -> vars .)
  ! reduce/reduce conflict for PR_calculaBinomial resolved using rule 28 (more_vars -> vars .)
  ! reduce/reduce conflict for PR_calculaNormal resolved using rule 28 (more_vars -> vars .)
  ! reduce/reduce conflict for } resolved using rule 28 (more_vars -> vars .)
    PR_FUNCTION     reduce using rule 28 (more_vars -> vars .)
    PR_MAIN         reduce using rule 28 (more_vars -> vars .)
    PR_REPEAT       reduce using rule 28 (more_vars -> vars .)
    PR_RETURN       reduce using rule 28 (more_vars -> vars .)
    PR_READ         reduce using rule 28 (more_vars -> vars .)
    PR_PRINT        reduce using rule 28 (more_vars -> vars .)
    ID              reduce using rule 28 (more_vars -> vars .)
    PR_IF           reduce using rule 28 (more_vars -> vars .)
    PR_calculaRegresion reduce using rule 28 (more_vars -> vars .)
    PR_prediceResultado reduce using rule 28 (more_vars -> vars .)
    PR_calculaModa  reduce using rule 28 (more_vars -> vars .)
    PR_calculaMediana reduce using rule 28 (more_vars -> vars .)
    PR_calculaMedia reduce using rule 28 (more_vars -> vars .)
    PR_calculaPoisson reduce using rule 28 (more_vars -> vars .)
    PR_calculaBinomial reduce using rule 28 (more_vars -> vars .)
    PR_calculaNormal reduce using rule 28 (more_vars -> vars .)
    }               reduce using rule 28 (more_vars -> vars .)
    PR_VAR          shift and go to state 7

  ! PR_FUNCTION     [ reduce using rule 100 (empty -> .) ]
  ! PR_MAIN         [ reduce using rule 100 (empty -> .) ]
  ! PR_REPEAT       [ reduce using rule 100 (empty -> .) ]
  ! PR_RETURN       [ reduce using rule 100 (empty -> .) ]
  ! PR_READ         [ reduce using rule 100 (empty -> .) ]
  ! PR_PRINT        [ reduce using rule 100 (empty -> .) ]
  ! ID              [ reduce using rule 100 (empty -> .) ]
  ! PR_IF           [ reduce using rule 100 (empty -> .) ]
  ! PR_calculaRegresion [ reduce using rule 100 (empty -> .) ]
  ! PR_prediceResultado [ reduce using rule 100 (empty -> .) ]
  ! PR_calculaModa  [ reduce using rule 100 (empty -> .) ]
  ! PR_calculaMediana [ reduce using rule 100 (empty -> .) ]
  ! PR_calculaMedia [ reduce using rule 100 (empty -> .) ]
  ! PR_calculaPoisson [ reduce using rule 100 (empty -> .) ]
  ! PR_calculaBinomial [ reduce using rule 100 (empty -> .) ]
  ! PR_calculaNormal [ reduce using rule 100 (empty -> .) ]
  ! }               [ reduce using rule 100 (empty -> .) ]

    vars                           shift and go to state 5
    more_vars                      shift and go to state 14
    empty                          shift and go to state 6

state 6

    (30) more_vars -> empty .

    PR_FUNCTION     reduce using rule 30 (more_vars -> empty .)
    PR_MAIN         reduce using rule 30 (more_vars -> empty .)
    PR_REPEAT       reduce using rule 30 (more_vars -> empty .)
    PR_RETURN       reduce using rule 30 (more_vars -> empty .)
    PR_READ         reduce using rule 30 (more_vars -> empty .)
    PR_PRINT        reduce using rule 30 (more_vars -> empty .)
    ID              reduce using rule 30 (more_vars -> empty .)
    PR_IF           reduce using rule 30 (more_vars -> empty .)
    PR_calculaRegresion reduce using rule 30 (more_vars -> empty .)
    PR_prediceResultado reduce using rule 30 (more_vars -> empty .)
    PR_calculaModa  reduce using rule 30 (more_vars -> empty .)
    PR_calculaMediana reduce using rule 30 (more_vars -> empty .)
    PR_calculaMedia reduce using rule 30 (more_vars -> empty .)
    PR_calculaPoisson reduce using rule 30 (more_vars -> empty .)
    PR_calculaBinomial reduce using rule 30 (more_vars -> empty .)
    PR_calculaNormal reduce using rule 30 (more_vars -> empty .)
    }               reduce using rule 30 (more_vars -> empty .)


state 7

    (2) vars -> PR_VAR . ids
    (3) ids -> . type ID index
    (7) type -> . PR_INT
    (8) type -> . PR_FLOAT
    (9) type -> . PR_BOOL
    (10) type -> . PR_STRING

    PR_INT          shift and go to state 17
    PR_FLOAT        shift and go to state 18
    PR_BOOL         shift and go to state 19
    PR_STRING       shift and go to state 20

    ids                            shift and go to state 15
    type                           shift and go to state 16

state 8

    (1) programa -> PR_PROGRAM { more_vars more_funcs . main }
    (99) main -> . PR_MAIN { more_vars more_bloques }

    PR_MAIN         shift and go to state 22

    main                           shift and go to state 21

state 9

    (31) more_funcs -> func .
    (32) more_funcs -> func . more_funcs
    (31) more_funcs -> . func
    (32) more_funcs -> . func more_funcs
    (33) more_funcs -> . empty
    (11) func -> . func1 func2
    (100) empty -> .
    (12) func1 -> . func1_1 func1_2
    (13) func1_1 -> . PR_FUNCTION func_type ID (

  ! reduce/reduce conflict for PR_MAIN resolved using rule 31 (more_funcs -> func .)
    PR_MAIN         reduce using rule 31 (more_funcs -> func .)
    PR_FUNCTION     shift and go to state 13

  ! PR_MAIN         [ reduce using rule 100 (empty -> .) ]

    func                           shift and go to state 9
    more_funcs                     shift and go to state 23
    empty                          shift and go to state 10
    func1                          shift and go to state 11
    func1_1                        shift and go to state 12

state 10

    (33) more_funcs -> empty .

    PR_MAIN         reduce using rule 33 (more_funcs -> empty .)


state 11

    (11) func -> func1 . func2
    (15) func2 -> . more_vars more_bloques }
    (28) more_vars -> . vars
    (29) more_vars -> . vars more_vars
    (30) more_vars -> . empty
    (2) vars -> . PR_VAR ids
    (100) empty -> .

    PR_VAR          shift and go to state 7
    PR_REPEAT       reduce using rule 100 (empty -> .)
    PR_RETURN       reduce using rule 100 (empty -> .)
    PR_READ         reduce using rule 100 (empty -> .)
    PR_PRINT        reduce using rule 100 (empty -> .)
    ID              reduce using rule 100 (empty -> .)
    PR_IF           reduce using rule 100 (empty -> .)
    PR_calculaRegresion reduce using rule 100 (empty -> .)
    PR_prediceResultado reduce using rule 100 (empty -> .)
    PR_calculaModa  reduce using rule 100 (empty -> .)
    PR_calculaMediana reduce using rule 100 (empty -> .)
    PR_calculaMedia reduce using rule 100 (empty -> .)
    PR_calculaPoisson reduce using rule 100 (empty -> .)
    PR_calculaBinomial reduce using rule 100 (empty -> .)
    PR_calculaNormal reduce using rule 100 (empty -> .)
    }               reduce using rule 100 (empty -> .)

    func2                          shift and go to state 24
    more_vars                      shift and go to state 25
    vars                           shift and go to state 5
    empty                          shift and go to state 6

state 12

    (12) func1 -> func1_1 . func1_2
    (14) func1_2 -> . more_ids ) {
    (16) more_ids -> . ids
    (17) more_ids -> . ids more_ids
    (18) more_ids -> . empty
    (3) ids -> . type ID index
    (100) empty -> .
    (7) type -> . PR_INT
    (8) type -> . PR_FLOAT
    (9) type -> . PR_BOOL
    (10) type -> . PR_STRING

    )               reduce using rule 100 (empty -> .)
    PR_INT          shift and go to state 17
    PR_FLOAT        shift and go to state 18
    PR_BOOL         shift and go to state 19
    PR_STRING       shift and go to state 20

    func1_2                        shift and go to state 26
    more_ids                       shift and go to state 27
    ids                            shift and go to state 28
    empty                          shift and go to state 29
    type                           shift and go to state 16

state 13

    (13) func1_1 -> PR_FUNCTION . func_type ID (
    (19) func_type -> . type
    (20) func_type -> . PR_VOID
    (7) type -> . PR_INT
    (8) type -> . PR_FLOAT
    (9) type -> . PR_BOOL
    (10) type -> . PR_STRING

    PR_VOID         shift and go to state 32
    PR_INT          shift and go to state 17
    PR_FLOAT        shift and go to state 18
    PR_BOOL         shift and go to state 19
    PR_STRING       shift and go to state 20

    func_type                      shift and go to state 30
    type                           shift and go to state 31

state 14

    (29) more_vars -> vars more_vars .

    PR_FUNCTION     reduce using rule 29 (more_vars -> vars more_vars .)
    PR_MAIN         reduce using rule 29 (more_vars -> vars more_vars .)
    PR_REPEAT       reduce using rule 29 (more_vars -> vars more_vars .)
    PR_RETURN       reduce using rule 29 (more_vars -> vars more_vars .)
    PR_READ         reduce using rule 29 (more_vars -> vars more_vars .)
    PR_PRINT        reduce using rule 29 (more_vars -> vars more_vars .)
    ID              reduce using rule 29 (more_vars -> vars more_vars .)
    PR_IF           reduce using rule 29 (more_vars -> vars more_vars .)
    PR_calculaRegresion reduce using rule 29 (more_vars -> vars more_vars .)
    PR_prediceResultado reduce using rule 29 (more_vars -> vars more_vars .)
    PR_calculaModa  reduce using rule 29 (more_vars -> vars more_vars .)
    PR_calculaMediana reduce using rule 29 (more_vars -> vars more_vars .)
    PR_calculaMedia reduce using rule 29 (more_vars -> vars more_vars .)
    PR_calculaPoisson reduce using rule 29 (more_vars -> vars more_vars .)
    PR_calculaBinomial reduce using rule 29 (more_vars -> vars more_vars .)
    PR_calculaNormal reduce using rule 29 (more_vars -> vars more_vars .)
    }               reduce using rule 29 (more_vars -> vars more_vars .)


state 15

    (2) vars -> PR_VAR ids .

    PR_VAR          reduce using rule 2 (vars -> PR_VAR ids .)
    PR_FUNCTION     reduce using rule 2 (vars -> PR_VAR ids .)
    PR_MAIN         reduce using rule 2 (vars -> PR_VAR ids .)
    PR_REPEAT       reduce using rule 2 (vars -> PR_VAR ids .)
    PR_RETURN       reduce using rule 2 (vars -> PR_VAR ids .)
    PR_READ         reduce using rule 2 (vars -> PR_VAR ids .)
    PR_PRINT        reduce using rule 2 (vars -> PR_VAR ids .)
    ID              reduce using rule 2 (vars -> PR_VAR ids .)
    PR_IF           reduce using rule 2 (vars -> PR_VAR ids .)
    PR_calculaRegresion reduce using rule 2 (vars -> PR_VAR ids .)
    PR_prediceResultado reduce using rule 2 (vars -> PR_VAR ids .)
    PR_calculaModa  reduce using rule 2 (vars -> PR_VAR ids .)
    PR_calculaMediana reduce using rule 2 (vars -> PR_VAR ids .)
    PR_calculaMedia reduce using rule 2 (vars -> PR_VAR ids .)
    PR_calculaPoisson reduce using rule 2 (vars -> PR_VAR ids .)
    PR_calculaBinomial reduce using rule 2 (vars -> PR_VAR ids .)
    PR_calculaNormal reduce using rule 2 (vars -> PR_VAR ids .)
    }               reduce using rule 2 (vars -> PR_VAR ids .)


state 16

    (3) ids -> type . ID index

    ID              shift and go to state 33


state 17

    (7) type -> PR_INT .

    ID              reduce using rule 7 (type -> PR_INT .)


state 18

    (8) type -> PR_FLOAT .

    ID              reduce using rule 8 (type -> PR_FLOAT .)


state 19

    (9) type -> PR_BOOL .

    ID              reduce using rule 9 (type -> PR_BOOL .)


state 20

    (10) type -> PR_STRING .

    ID              reduce using rule 10 (type -> PR_STRING .)


state 21

    (1) programa -> PR_PROGRAM { more_vars more_funcs main . }

    }               shift and go to state 34


state 22

    (99) main -> PR_MAIN . { more_vars more_bloques }

    {               shift and go to state 35


state 23

    (32) more_funcs -> func more_funcs .

    PR_MAIN         reduce using rule 32 (more_funcs -> func more_funcs .)


state 24

    (11) func -> func1 func2 .

    PR_FUNCTION     reduce using rule 11 (func -> func1 func2 .)
    PR_MAIN         reduce using rule 11 (func -> func1 func2 .)


state 25

    (15) func2 -> more_vars . more_bloques }
    (34) more_bloques -> . bloque
    (35) more_bloques -> . bloque more_bloques
    (36) more_bloques -> . empty
    (21) bloque -> . assignation
    (22) bloque -> . loop
    (23) bloque -> . cond
    (24) bloque -> . return
    (25) bloque -> . lecture
    (26) bloque -> . writing
    (27) bloque -> . call
    (100) empty -> .
    (37) assignation -> . assignTo = mega_exp
    (42) loop -> . PR_REPEAT ( mega_exp ) { more_bloques }
    (43) cond -> . cond1 cond2
    (50) return -> . PR_RETURN mega_exp
    (51) lecture -> . PR_READ ARR ID index
    (52) writing -> . PR_PRINT ( mega_exp )
    (61) call -> . call_1 call_2
    (62) call -> . func_pred
    (38) assignTo -> . ID other_index
    (44) cond1 -> . PR_IF ( mega_exp ) {
    (63) call_1 -> . ID (
    (53) func_pred -> . PR_calculaRegresion ( exp )
    (54) func_pred -> . PR_prediceResultado ( exp )
    (55) func_pred -> . PR_calculaModa ( exp )
    (56) func_pred -> . PR_calculaMediana ( exp )
    (57) func_pred -> . PR_calculaMedia ( exp )
    (58) func_pred -> . PR_calculaPoisson ( exp )
    (59) func_pred -> . PR_calculaBinomial ( exp )
    (60) func_pred -> . PR_calculaNormal ( exp )

    }               reduce using rule 100 (empty -> .)
    PR_REPEAT       shift and go to state 47
    PR_RETURN       shift and go to state 49
    PR_READ         shift and go to state 50
    PR_PRINT        shift and go to state 52
    ID              shift and go to state 51
    PR_IF           shift and go to state 55
    PR_calculaRegresion shift and go to state 56
    PR_prediceResultado shift and go to state 57
    PR_calculaModa  shift and go to state 58
    PR_calculaMediana shift and go to state 59
    PR_calculaMedia shift and go to state 60
    PR_calculaPoisson shift and go to state 61
    PR_calculaBinomial shift and go to state 62
    PR_calculaNormal shift and go to state 63

    more_bloques                   shift and go to state 36
    bloque                         shift and go to state 37
    empty                          shift and go to state 38
    assignation                    shift and go to state 39
    loop                           shift and go to state 40
    cond                           shift and go to state 41
    return                         shift and go to state 42
    lecture                        shift and go to state 43
    writing                        shift and go to state 44
    call                           shift and go to state 45
    assignTo                       shift and go to state 46
    cond1                          shift and go to state 48
    call_1                         shift and go to state 53
    func_pred                      shift and go to state 54

state 26

    (12) func1 -> func1_1 func1_2 .

    PR_VAR          reduce using rule 12 (func1 -> func1_1 func1_2 .)
    PR_REPEAT       reduce using rule 12 (func1 -> func1_1 func1_2 .)
    PR_RETURN       reduce using rule 12 (func1 -> func1_1 func1_2 .)
    PR_READ         reduce using rule 12 (func1 -> func1_1 func1_2 .)
    PR_PRINT        reduce using rule 12 (func1 -> func1_1 func1_2 .)
    ID              reduce using rule 12 (func1 -> func1_1 func1_2 .)
    PR_IF           reduce using rule 12 (func1 -> func1_1 func1_2 .)
    PR_calculaRegresion reduce using rule 12 (func1 -> func1_1 func1_2 .)
    PR_prediceResultado reduce using rule 12 (func1 -> func1_1 func1_2 .)
    PR_calculaModa  reduce using rule 12 (func1 -> func1_1 func1_2 .)
    PR_calculaMediana reduce using rule 12 (func1 -> func1_1 func1_2 .)
    PR_calculaMedia reduce using rule 12 (func1 -> func1_1 func1_2 .)
    PR_calculaPoisson reduce using rule 12 (func1 -> func1_1 func1_2 .)
    PR_calculaBinomial reduce using rule 12 (func1 -> func1_1 func1_2 .)
    PR_calculaNormal reduce using rule 12 (func1 -> func1_1 func1_2 .)
    }               reduce using rule 12 (func1 -> func1_1 func1_2 .)


state 27

    (14) func1_2 -> more_ids . ) {

    )               shift and go to state 64


state 28

    (16) more_ids -> ids .
    (17) more_ids -> ids . more_ids
    (16) more_ids -> . ids
    (17) more_ids -> . ids more_ids
    (18) more_ids -> . empty
    (3) ids -> . type ID index
    (100) empty -> .
    (7) type -> . PR_INT
    (8) type -> . PR_FLOAT
    (9) type -> . PR_BOOL
    (10) type -> . PR_STRING

  ! reduce/reduce conflict for ) resolved using rule 16 (more_ids -> ids .)
    )               reduce using rule 16 (more_ids -> ids .)
    PR_INT          shift and go to state 17
    PR_FLOAT        shift and go to state 18
    PR_BOOL         shift and go to state 19
    PR_STRING       shift and go to state 20

  ! )               [ reduce using rule 100 (empty -> .) ]

    ids                            shift and go to state 28
    more_ids                       shift and go to state 65
    empty                          shift and go to state 29
    type                           shift and go to state 16

state 29

    (18) more_ids -> empty .

    )               reduce using rule 18 (more_ids -> empty .)


state 30

    (13) func1_1 -> PR_FUNCTION func_type . ID (

    ID              shift and go to state 66


state 31

    (19) func_type -> type .

    ID              reduce using rule 19 (func_type -> type .)


state 32

    (20) func_type -> PR_VOID .

    ID              reduce using rule 20 (func_type -> PR_VOID .)


state 33

    (3) ids -> type ID . index
    (4) index -> . [ CTEI ]
    (5) index -> . [ CTEI ] [ CTEI ]
    (6) index -> . empty
    (100) empty -> .

    [               shift and go to state 68
    PR_VAR          reduce using rule 100 (empty -> .)
    PR_FUNCTION     reduce using rule 100 (empty -> .)
    PR_MAIN         reduce using rule 100 (empty -> .)
    PR_REPEAT       reduce using rule 100 (empty -> .)
    PR_RETURN       reduce using rule 100 (empty -> .)
    PR_READ         reduce using rule 100 (empty -> .)
    PR_PRINT        reduce using rule 100 (empty -> .)
    ID              reduce using rule 100 (empty -> .)
    PR_IF           reduce using rule 100 (empty -> .)
    PR_calculaRegresion reduce using rule 100 (empty -> .)
    PR_prediceResultado reduce using rule 100 (empty -> .)
    PR_calculaModa  reduce using rule 100 (empty -> .)
    PR_calculaMediana reduce using rule 100 (empty -> .)
    PR_calculaMedia reduce using rule 100 (empty -> .)
    PR_calculaPoisson reduce using rule 100 (empty -> .)
    PR_calculaBinomial reduce using rule 100 (empty -> .)
    PR_calculaNormal reduce using rule 100 (empty -> .)
    }               reduce using rule 100 (empty -> .)
    PR_INT          reduce using rule 100 (empty -> .)
    PR_FLOAT        reduce using rule 100 (empty -> .)
    PR_BOOL         reduce using rule 100 (empty -> .)
    PR_STRING       reduce using rule 100 (empty -> .)
    )               reduce using rule 100 (empty -> .)

    index                          shift and go to state 67
    empty                          shift and go to state 69

state 34

    (1) programa -> PR_PROGRAM { more_vars more_funcs main } .

    $end            reduce using rule 1 (programa -> PR_PROGRAM { more_vars more_funcs main } .)


state 35

    (99) main -> PR_MAIN { . more_vars more_bloques }
    (28) more_vars -> . vars
    (29) more_vars -> . vars more_vars
    (30) more_vars -> . empty
    (2) vars -> . PR_VAR ids
    (100) empty -> .

    PR_VAR          shift and go to state 7
    PR_REPEAT       reduce using rule 100 (empty -> .)
    PR_RETURN       reduce using rule 100 (empty -> .)
    PR_READ         reduce using rule 100 (empty -> .)
    PR_PRINT        reduce using rule 100 (empty -> .)
    ID              reduce using rule 100 (empty -> .)
    PR_IF           reduce using rule 100 (empty -> .)
    PR_calculaRegresion reduce using rule 100 (empty -> .)
    PR_prediceResultado reduce using rule 100 (empty -> .)
    PR_calculaModa  reduce using rule 100 (empty -> .)
    PR_calculaMediana reduce using rule 100 (empty -> .)
    PR_calculaMedia reduce using rule 100 (empty -> .)
    PR_calculaPoisson reduce using rule 100 (empty -> .)
    PR_calculaBinomial reduce using rule 100 (empty -> .)
    PR_calculaNormal reduce using rule 100 (empty -> .)
    }               reduce using rule 100 (empty -> .)

    more_vars                      shift and go to state 70
    vars                           shift and go to state 5
    empty                          shift and go to state 6

state 36

    (15) func2 -> more_vars more_bloques . }

    }               shift and go to state 71


state 37

    (34) more_bloques -> bloque .
    (35) more_bloques -> bloque . more_bloques
    (34) more_bloques -> . bloque
    (35) more_bloques -> . bloque more_bloques
    (36) more_bloques -> . empty
    (21) bloque -> . assignation
    (22) bloque -> . loop
    (23) bloque -> . cond
    (24) bloque -> . return
    (25) bloque -> . lecture
    (26) bloque -> . writing
    (27) bloque -> . call
    (100) empty -> .
    (37) assignation -> . assignTo = mega_exp
    (42) loop -> . PR_REPEAT ( mega_exp ) { more_bloques }
    (43) cond -> . cond1 cond2
    (50) return -> . PR_RETURN mega_exp
    (51) lecture -> . PR_READ ARR ID index
    (52) writing -> . PR_PRINT ( mega_exp )
    (61) call -> . call_1 call_2
    (62) call -> . func_pred
    (38) assignTo -> . ID other_index
    (44) cond1 -> . PR_IF ( mega_exp ) {
    (63) call_1 -> . ID (
    (53) func_pred -> . PR_calculaRegresion ( exp )
    (54) func_pred -> . PR_prediceResultado ( exp )
    (55) func_pred -> . PR_calculaModa ( exp )
    (56) func_pred -> . PR_calculaMediana ( exp )
    (57) func_pred -> . PR_calculaMedia ( exp )
    (58) func_pred -> . PR_calculaPoisson ( exp )
    (59) func_pred -> . PR_calculaBinomial ( exp )
    (60) func_pred -> . PR_calculaNormal ( exp )

  ! reduce/reduce conflict for } resolved using rule 34 (more_bloques -> bloque .)
    }               reduce using rule 34 (more_bloques -> bloque .)
    PR_REPEAT       shift and go to state 47
    PR_RETURN       shift and go to state 49
    PR_READ         shift and go to state 50
    PR_PRINT        shift and go to state 52
    ID              shift and go to state 51
    PR_IF           shift and go to state 55
    PR_calculaRegresion shift and go to state 56
    PR_prediceResultado shift and go to state 57
    PR_calculaModa  shift and go to state 58
    PR_calculaMediana shift and go to state 59
    PR_calculaMedia shift and go to state 60
    PR_calculaPoisson shift and go to state 61
    PR_calculaBinomial shift and go to state 62
    PR_calculaNormal shift and go to state 63

  ! }               [ reduce using rule 100 (empty -> .) ]

    bloque                         shift and go to state 37
    more_bloques                   shift and go to state 72
    empty                          shift and go to state 38
    assignation                    shift and go to state 39
    loop                           shift and go to state 40
    cond                           shift and go to state 41
    return                         shift and go to state 42
    lecture                        shift and go to state 43
    writing                        shift and go to state 44
    call                           shift and go to state 45
    assignTo                       shift and go to state 46
    cond1                          shift and go to state 48
    call_1                         shift and go to state 53
    func_pred                      shift and go to state 54

state 38

    (36) more_bloques -> empty .

    }               reduce using rule 36 (more_bloques -> empty .)


state 39

    (21) bloque -> assignation .
